--- a/openApiDocs/v1.0/Files.yml
+++ b/openApiDocs/v1.0/Files.yml
@@ -800,6 +800,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -3746,6 +3747,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -4078,6 +4080,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -4630,6 +4633,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -5829,6 +5833,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -10012,6 +10017,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -13140,6 +13146,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -13914,6 +13921,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -15113,6 +15121,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -16210,6 +16219,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -19393,6 +19403,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -19701,6 +19712,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -20197,6 +20209,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -21244,6 +21257,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -26198,6 +26212,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -29480,6 +29495,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -29836,6 +29852,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -30444,6 +30461,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -31746,6 +31764,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -34330,6 +34349,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -37368,6 +37388,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -38222,6 +38243,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -39524,6 +39546,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -40420,6 +40443,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -43449,6 +43473,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -43781,6 +43806,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -44333,6 +44359,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -45491,6 +45518,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -48468,6 +48496,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -49340,6 +49369,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -52468,6 +52498,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -53242,6 +53273,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -54441,6 +54473,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -55516,6 +55549,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -56639,6 +56673,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -57686,6 +57721,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -59999,6 +60035,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -63281,6 +63318,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -63637,6 +63675,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -64245,6 +64284,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -65547,6 +65587,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -68131,6 +68172,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -71169,6 +71211,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -72023,6 +72066,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -73325,6 +73369,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -74221,6 +74266,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -77250,6 +77296,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -77582,6 +77629,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -78134,6 +78182,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -79292,6 +79341,7 @@ paths:
                 - provisionedPlans
                 - proxyAddresses
                 - securityIdentifier
+                - serviceProvisioningErrors
                 - showInAddressList
                 - signInSessionsValidFromDateTime
                 - state
@@ -82308,6 +82358,10 @@ components:
               type: string
               description: 'Security identifier (SID) of the user, used in Windows scenarios. Read-only. Returned by default. Supports $select and $filter (eq, not, ge, le, startsWith).'
               nullable: true
+            serviceProvisioningErrors:
+              type: array
+              items:
+                $ref: '#/components/schemas/microsoft.graph.serviceProvisioningError'
             showInAddressList:
               type: boolean
               description: Do not use in Microsoft Graph. Manage this property through the Microsoft 365 admin center instead. Represents whether the user should be included in the Outlook global address list. See Known issue.
@@ -82451,7 +82505,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.directoryObject'
-              description: Directory objects that are owned by the user. Read-only. Nullable. Supports $expand.
+              description: 'Directory objects that are owned by the user. Read-only. Nullable. Supports $expand, $select nested in $expand, and $filter (/$count eq 0, /$count ne 0, /$count eq 1, /$count ne 1).'
               x-ms-navigationProperty: true
             registeredDevices:
               type: array
@@ -84408,6 +84462,23 @@ components:
         service:
           type: string
           description: 'The name of the service; for example, ''AccessControlS2S'''
+          nullable: true
+      additionalProperties:
+        type: object
+    microsoft.graph.serviceProvisioningError:
+      title: serviceProvisioningError
+      type: object
+      properties:
+        createdDateTime:
+          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+          type: string
+          format: date-time
+          nullable: true
+        isResolved:
+          type: boolean
+          nullable: true
+        serviceInstance:
+          type: string
           nullable: true
       additionalProperties:
         type: object
@@ -90478,13 +90549,17 @@ components:
               type: string
               description: 'Security identifier of the group, used in Windows scenarios. Returned by default.'
               nullable: true
+            serviceProvisioningErrors:
+              type: array
+              items:
+                $ref: '#/components/schemas/microsoft.graph.serviceProvisioningError'
             theme:
               type: string
               description: 'Specifies a Microsoft 365 group''s color theme. Possible values are Teal, Purple, Green, Blue, Pink, Orange or Red. Returned by default.'
               nullable: true
             visibility:
               type: string
-              description: 'Specifies the group join policy and group content visibility for groups. Possible values are: Private, Public, or HiddenMembership. HiddenMembership can be set only for Microsoft 365 groups, when the groups are created. It can''t be updated later. Other values of visibility can be updated after group creation. If visibility value is not specified during group creation on Microsoft Graph, a security group is created as Private by default and Microsoft 365 group is Public. Groups assignable to roles are always Private. See group visibility options to learn more. Returned by default. Nullable.'
+              description: 'Specifies the group join policy and group content visibility for groups. Possible values are: Private, Public, or HiddenMembership. HiddenMembership can be set only for Microsoft 365 groups, when the groups are created. It can''t be updated later. Other values of visibility can be updated after group creation. If visibility value is not specified during group creation on Microsoft Graph, a security group is created as Private by default and Microsoft 365 group is Public. Groups assignable to roles are always Private. To learn more, see group visibility options. Returned by default. Nullable.'
               nullable: true
             allowExternalSenders:
               type: boolean
